# StreamingSustainability

./: .coverage  .gitignore  README.md  documentation.md  experiment.py  main.py  measurement.py  pyproject.toml  settings.py  usermanual.md
results/: experiment_all_20260211.ods
src/: experiment.py  main.py  measurement.py  settings.py
src/tests/: experiment_test.py  measurement_test.py  settings_test.py  test_settings.py
tests/: main_test.py
