[project]
name = "measurementscript"
version = "0.1.0"
description = "Sustainability CS II project"
authors = [
    {name = "Paula Meuronen",email = "paula.meuronen@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "path (>=17.1.1,<18.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.13.4,<8.0.0)",
    "pylint (>=4.0.4,<5.0.0)"
]
